# http-server

./: .dockerignore  .env.example  .gitattributes  .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  clients.c  clients.h  devcerts.sh  docker-compose.yml  network.c  network.h  parser.c  parser.h  run-server.sh  run.sh  server.c
certs/: chain.pem  pkey.pem
docker/: entrypoint.sh
include/: clients.h  db.h  db_ctx.h  http_parser.h  http_response.h  network.h  parser.h  responder.h  utils.h  worker.h
include/auth/: cookie.h  crypto.h  csrf.h  oauth.h  session.h
include/http/: body.h  parser.h  request.h  response.h
include/net/: clients.h  socket.h
include/router/: handlers.h  router.h
include/utils/: ctx.h  str.h
src/: clients.c  http_parser.c  http_response.c  main.c  network.c  parser.c  responder.c  server.c  worker.c
src/auth/: cookie.c  crypto.c  csrf.c  oauth.c  session.c
src/db/: db.c  db_ctx.c  migrate.sh
src/db/migrations/: 001_init.sql
src/http/: body.c  parser.c  request.c  response.c
src/net/: clients.c  socket.c
src/router/: handlers.c  router.c
static/: index.css  index.html  styles.css
static/about/: index.html
static/chat/: index.html
static/docs/: index.html
static/login/: index.html
static/security/: index.html
static/signup/: index.css  index.html
tests/: CMakeLists.txt  test_basic.c  test_cookie_parse.c  test_csrf.c  test_db.c  test_http_body.c  test_http_parse.c  test_http_response.c  test_oauth.c
